fix style issues on small screens

--- a/style.css
+++ b/style.css
@@ -340,6 +340,8 @@ nav a {
     border-radius: .4rem;
 }
 
+
+
 .single-contact i {
     width: 1.3rem;
     max-width: 1.3rem;
@@ -368,6 +370,10 @@ nav a {
 @media screen and (max-width : 1024px) {
     .nav-header {
         padding: .5rem 2rem;
+    }
+
+    .nav-header .social-nav {
+        display: none;
     }
 
     .nav-header .contact-nav {
@@ -410,13 +416,27 @@ nav a {
 
     .footer-bottom {
         flex-direction: column;
+        row-gap: 2rem;
     }
+
+    .our_services{
+        padding: 5rem 2rem;
+    }
+
+    .three_servicees{
+        grid-gap: 1rem;
+    }
+
+    .single-contact p{
+        font-size: smaller;
+    }
+
 }
 
 
 @media screen and (max-width : 700px) {
     .presentation-box {
-        margin: 0rem 2rem;
+        margin: 0rem 1rem;
         border-top-left-radius: 1rem;
         border-top-right-radius: 1rem;
     }
